[tool.poetry]
name = "vllm-cpu"
version = "0.1.0"
description = ""
authors = ["Michael Huang <michaelhly@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
intel-extension-for-pytorch = {url = "https://intel-extension-for-pytorch.s3.amazonaws.com/ipex_dev/cpu/intel_extension_for_pytorch-2.3.100%2Bgit0eb3473-cp310-cp310-linux_x86_64.whl", platform = "linux"}
wheel = "^0.43.0"
packaging = "^24.1"
setuptools = "^70.1.1"
numpy = "1.26.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
