[tool.poetry]
name = "vllm-cpu"
version = "0.1.0"
description = ""
authors = ["Michael Huang <michaelhly@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
intel-extension-for-pytorch = {version="^2.3.100", markers = "platform_machine == 'x86_64'"}
wheel = "^0.43.0"
packaging = "^24.1"
setuptools = "^70.1.1"
numpy = "1.26.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
